[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/Boat/Boat.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/UI/PlayerUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Enemy/Boss/Boss.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Tilemaps/default.tres" type="TileSet" id=4]
[ext_resource path="res://assets/UI/PlayerUI.gd" type="Script" id=5]
[ext_resource path="res://assets/Boat/Boat_Scripts/Camera.gd" type="Script" id=6]
[ext_resource path="res://default_theme.tres" type="Theme" id=7]
[ext_resource path="res://assets/Styles/HealthFG.tres" type="StyleBox" id=8]
[ext_resource path="res://assets/Styles/HealthBG.tres" type="StyleBox" id=9]
[ext_resource path="res://assets/Font/AnalogueOS-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/Dialogue/Dialogue.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/Scenes/EnemyUI.gd" type="Script" id=12]
[ext_resource path="res://assets/Scenes/CutsceneCamera.gd" type="Script" id=13]
[ext_resource path="res://assets/Music/Level_3.wav" type="AudioStream" id=14]

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 50
extra_spacing_top = 1
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 35
extra_spacing_top = 1
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=3]
resource_name = "Change"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("CutsceneCamera:current")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:current")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CutsceneCamera:current")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:current")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="Level_3" type="Node2D"]

[node name="Walls" type="TileMap" parent="."]
rotation = 0.00024799
scale = Vector2( 2, 2 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
show_collision = true
format = 1
tile_data = PoolIntArray( 30, 0, 0, 31, -1073741800, 0, 32, -1073741800, 0, 33, -1073741800, 0, 34, -1610612736, 0, 47, 0, 0, 48, -1073741800, 0, 49, -1073741800, 0, 50, 1, 0, 65565, 0, 0, 65566, -1073741798, 0, 65567, 27, 0, 65568, 28, 0, 65569, -1610612709, 0, 65570, 26, 0, 65571, -1610612736, 0, 65582, 0, 0, 65583, -1073741798, 0, 65584, 27, 0, 65585, -1610612709, 0, 65586, 26, 0, 65587, -1610612736, 0, 131100, 0, 0, 131101, -1073741798, 0, 131102, 27, 0, 131103, -1610612706, 0, 131104, 1610612768, 0, 131105, 1610612766, 0, 131106, -1610612709, 0, 131107, 26, 0, 131108, -1073741800, 0, 131109, -1073741800, 0, 131110, -1610612736, 0, 131116, 0, 0, 131117, -1073741800, 0, 131118, -1073741798, 0, 131119, 27, 0, 131120, -1610612706, 0, 131121, 1610612766, 0, 131122, -1610612709, 0, 131123, 26, 0, 131124, -1610612736, 0, 196635, 0, 0, 196636, -1073741798, 0, 196637, 27, 0, 196638, -1610612706, 0, 196639, 1610612768, 0, 196640, 1610612768, 0, 196641, 1610612768, 0, 196642, 1610612766, 0, 196643, 29, 0, 196644, 29, 0, 196645, -1610612709, 0, 196646, 26, 0, 196647, -1610612736, 0, 196650, 0, 0, 196651, -1073741800, 0, 196652, -1073741798, 0, 196653, 27, 0, 196654, 29, 0, 196655, -1610612706, 0, 196656, 1610612768, 0, 196657, 1610612768, 0, 196658, 1610612766, 0, 196659, -1610612709, 0, 196660, 26, 0, 196661, -1610612736, 0, 262170, 0, 0, 262171, -1073741798, 0, 262172, 27, 0, 262173, -1610612706, 0, 262174, 1610612768, 0, 262175, 1610612768, 0, 262176, 1610612768, 0, 262177, 1610612768, 0, 262178, 1610612768, 0, 262179, 1610612768, 0, 262180, 32, 0, 262181, 1610612766, 0, 262182, -1610612709, 0, 262183, 24, 0, 262186, 1610612760, 0, 262187, 27, 0, 262188, 29, 0, 262189, -1610612706, 0, 262190, 32, 0, 262191, 1610612768, 0, 262192, 1610612768, 0, 262193, 1610612768, 0, 262194, 1610612768, 0, 262195, 1610612766, 0, 262196, -1610612709, 0, 262197, 26, 0, 262198, -1610612736, 0, 327705, 0, 0, 327706, -1073741798, 0, 327707, 27, 0, 327708, -1610612706, 0, 327709, 1610612768, 0, 327710, 1610612768, 0, 327711, 1610612768, 0, 327712, 1610612768, 0, 327713, 1610612768, 0, 327714, 1610612768, 0, 327715, 32, 0, 327716, 32, 0, 327717, 32, 0, 327718, -1610612707, 0, 327719, 26, 0, 327720, -1073741800, 0, 327721, -1073741800, 0, 327722, -1073741798, 0, 327723, -1073741795, 0, 327724, -1073741794, 0, 327725, 1610612764, 0, 327726, 1610612764, 0, 327727, 30, 0, 327728, 32, 0, 327729, 1610612768, 0, 327730, 1610612768, 0, 327731, 1610612768, 0, 327732, 1610612766, 0, 327733, -1610612709, 0, 327734, -1610612732, 0, 393240, 0, 0, 393241, -1073741798, 0, 393242, 27, 0, 393243, -1610612706, 0, 393244, 1610612768, 0, 393245, 1610612768, 0, 393246, 1610612768, 0, 393247, 32, 0, 393248, 1610612768, 0, 393249, 1610612768, 0, 393250, 1610612768, 0, 393251, 32, 0, 393252, 32, 0, 393253, 32, 0, 393254, 1610612766, 0, 393255, 29, 0, 393256, 29, 0, 393257, 29, 0, 393258, 29, 0, 393259, -1610612706, 0, 393260, -1610612708, 0, 393261, -1073741823, 0, 393262, 1, 0, 393263, -1073741797, 0, 393264, 30, 0, 393265, 32, 0, 393266, 32, 0, 393267, 1610612768, 0, 393268, 1610612768, 0, 393269, -1610612708, 0, 393270, 26, 0, 393271, -1610612736, 0, 458773, -1073741823, 0, 458774, 4, 0, 458775, 4, 0, 458776, -1073741798, 0, 458777, 27, 0, 458778, -1610612706, 0, 458779, 1610612768, 0, 458780, 1610612768, 0, 458781, 1610612768, 0, 458782, 32, 0, 458783, 32, 0, 458784, 32, 0, 458785, 1610612768, 0, 458786, 32, 0, 458787, 32, 0, 458788, 32, 0, 458789, 32, 0, 458790, 32, 0, 458791, 32, 0, 458792, 32, 0, 458793, 32, 0, 458794, 32, 0, 458795, 32, 0, 458796, -1610612708, 0, 458797, 1610612737, 0, 458798, 1610612762, 0, 458799, 1, 0, 458800, -1073741796, 0, 458801, 32, 0, 458802, 32, 0, 458803, 1610612768, 0, 458804, 1610612768, 0, 458805, 1610612766, 0, 458806, -1610612709, 0, 458807, -1610612732, 0, 524306, -1073741823, 0, 524307, 4, 0, 524308, 4, 0, 524309, -1073741798, 0, 524310, 27, 0, 524311, 28, 0, 524312, 28, 0, 524313, -1610612706, 0, 524314, 1610612768, 0, 524315, 1610612768, 0, 524316, 1610612768, 0, 524317, 1610612768, 0, 524318, 32, 0, 524319, 32, 0, 524320, 32, 0, 524321, 32, 0, 524322, 32, 0, 524323, 32, 0, 524324, 32, 0, 524325, 32, 0, 524326, 32, 0, 524327, 32, 0, 524328, 32, 0, 524329, 32, 0, 524330, 32, 0, 524331, 32, 0, 524332, 1610612766, 0, 524333, -1610612709, 0, 524334, 1610612737, 0, 524335, -1610612735, 0, 524336, -1073741796, 0, 524337, 32, 0, 524338, 32, 0, 524339, 1610612768, 0, 524340, 1610612768, 0, 524341, 1610612768, 0, 524342, -1610612708, 0, 524343, -1610612732, 0, 589840, -1073741823, 0, 589841, 4, 0, 589842, -1073741798, 0, 589843, 27, 0, 589844, 28, 0, 589845, 28, 0, 589846, -1610612706, 0, 589847, -1073741792, 0, 589848, 1610612768, 0, 589849, 1610612768, 0, 589850, 1610612768, 0, 589851, 1610612768, 0, 589852, 1610612768, 0, 589853, 1610612768, 0, 589854, 32, 0, 589855, 32, 0, 589856, 32, 0, 589857, 32, 0, 589858, 32, 0, 589859, 32, 0, 589860, 32, 0, 589861, 32, 0, 589862, 32, 0, 589863, 32, 0, 589864, 32, 0, 589865, 32, 0, 589866, 32, 0, 589867, 32, 0, 589868, 32, 0, 589869, 1610612766, 0, 589870, 28, 0, 589871, 28, 0, 589872, -1610612706, 0, 589873, 32, 0, 589874, 32, 0, 589875, 1610612768, 0, 589876, 1610612768, 0, 589877, 1610612768, 0, 589878, -1610612708, 0, 589879, 26, 0, 589880, -1610612736, 0, 655375, -1073741823, 0, 655376, -1073741798, 0, 655377, 27, 0, 655378, 28, 0, 655379, -1610612706, 0, 655380, -1073741792, 0, 655381, -1073741792, 0, 655382, -1073741792, 0, 655383, -1073741792, 0, 655384, 1610612768, 0, 655385, 1610612768, 0, 655386, 1610612768, 0, 655387, 1610612768, 0, 655388, 1610612768, 0, 655389, 1610612768, 0, 655390, 32, 0, 655391, 32, 0, 655392, 32, 0, 655393, 32, 0, 655394, 32, 0, 655395, 32, 0, 655396, 32, 0, 655397, 32, 0, 655398, 32, 0, 655399, 32, 0, 655400, 32, 0, 655401, 32, 0, 655402, 32, 0, 655403, 32, 0, 655404, 32, 0, 655405, 32, 0, 655406, 32, 0, 655407, 32, 0, 655408, 32, 0, 655409, 32, 0, 655410, 32, 0, 655411, 32, 0, 655412, 1610612768, 0, 655413, 1610612768, 0, 655414, 1610612766, 0, 655415, -1610612709, 0, 655416, -1610612732, 0, 720911, -1073741820, 0, 720912, 27, 0, 720913, -1610612706, 0, 720914, -1073741792, 0, 720915, -1073741792, 0, 720916, -1073741792, 0, 720917, -1073741792, 0, 720918, -1073741792, 0, 720919, -1073741794, 0, 720920, 1610612765, 0, 720921, 1610612765, 0, 720922, 30, 0, 720923, 1610612768, 0, 720924, 1610612768, 0, 720925, 1610612768, 0, 720926, 32, 0, 720927, 32, 0, 720928, 32, 0, 720929, 32, 0, 720930, 32, 0, 720931, 32, 0, 720932, 32, 0, 720933, 32, 0, 720934, 32, 0, 720935, 32, 0, 720936, 32, 0, 720937, 32, 0, 720938, 32, 0, 720939, 32, 0, 720940, 32, 0, 720941, 32, 0, 720942, 32, 0, 720943, 32, 0, 720944, 32, 0, 720945, 32, 0, 720946, 32, 0, 720947, 1610612768, 0, 720948, 1610612768, 0, 720949, 1610612768, 0, 720950, 1610612768, 0, 720951, -1610612708, 0, 720952, -1610612732, 0, 786447, -1073741820, 0, 786448, -1073741796, 0, 786449, -1073741792, 0, 786450, -1073741792, 0, 786451, -1073741792, 0, 786452, -1073741792, 0, 786453, -1073741792, 0, 786454, -1073741792, 0, 786455, -1610612707, 0, 786456, -1610612734, 0, 786457, 1610612738, 0, 786458, -1073741797, 0, 786459, 30, 0, 786460, 1610612768, 0, 786461, 1610612768, 0, 786462, 32, 0, 786463, 32, 0, 786464, 32, 0, 786465, 32, 0, 786466, 32, 0, 786467, 32, 0, 786468, 32, 0, 786469, 32, 0, 786470, 32, 0, 786471, 32, 0, 786472, 32, 0, 786473, 32, 0, 786474, 32, 0, 786475, 32, 0, 786476, 32, 0, 786477, 32, 0, 786478, 32, 0, 786479, 32, 0, 786480, 32, 0, 786481, 32, 0, 786482, 32, 0, 786483, 32, 0, 786484, 32, 0, 786485, 1610612768, 0, 786486, 1610612768, 0, 786487, -1610612708, 0, 786488, -1610612732, 0, 851983, -1073741820, 0, 851984, -1073741796, 0, 851985, -1073741792, 0, 851986, -1073741792, 0, 851987, -1073741792, 0, 851988, -1073741792, 0, 851989, -1073741792, 0, 851990, -1073741792, 0, 851991, -1610612707, 0, 851992, 2, 0, 851993, 26, 0, 851994, 1, 0, 851995, -1073741795, 0, 851996, 1610612768, 0, 851997, 1610612768, 0, 851998, 32, 0, 851999, 32, 0, 852000, 32, 0, 852001, 32, 0, 852002, 32, 0, 852003, 32, 0, 852004, 32, 0, 852005, 32, 0, 852006, 32, 0, 852007, 32, 0, 852008, 32, 0, 852009, 32, 0, 852010, 32, 0, 852011, 32, 0, 852012, 32, 0, 852013, 32, 0, 852014, 32, 0, 852015, 32, 0, 852016, 32, 0, 852017, 32, 0, 852018, 32, 0, 852019, 32, 0, 852020, 32, 0, 852021, 1610612768, 0, 852022, 1610612768, 0, 852023, -1610612708, 0, 852024, -1610612732, 0, 917519, -1073741820, 0, 917520, -1073741797, 0, 917521, 30, 0, 917522, -1073741792, 0, 917523, -1073741792, 0, 917524, -1073741792, 0, 917525, -1073741792, 0, 917526, -1073741792, 0, 917527, 1610612766, 0, 917528, -1610612709, 0, 917529, 1610612737, 0, 917530, -1610612735, 0, 917531, -1073741795, 0, 917532, 1610612768, 0, 917533, 32, 0, 917534, 32, 0, 917535, 32, 0, 917536, 32, 0, 917537, 32, 0, 917538, 32, 0, 917539, 32, 0, 917540, 32, 0, 917541, 32, 0, 917542, 32, 0, 917543, 32, 0, 917544, 32, 0, 917545, 32, 0, 917546, 32, 0, 917547, 32, 0, 917548, 32, 0, 917549, 32, 0, 917550, 32, 0, 917551, 32, 0, 917552, 32, 0, 917553, 32, 0, 917554, 32, 0, 917555, 32, 0, 917556, 32, 0, 917557, 1610612768, 0, 917558, 1610612768, 0, 917559, -1610612708, 0, 917560, -1610612732, 0, 983055, 1610612737, 0, 983056, 1610612762, 0, 983057, -1073741797, 0, 983058, 30, 0, 983059, -1073741792, 0, 983060, -1073741792, 0, 983061, -1073741792, 0, 983062, -1073741792, 0, 983063, -1073741792, 0, 983064, 1610612766, 0, 983065, 29, 0, 983066, 29, 0, 983067, -1610612706, 0, 983068, 1610612768, 0, 983069, 32, 0, 983070, 32, 0, 983071, 32, 0, 983072, 32, 0, 983073, 32, 0, 983074, 32, 0, 983075, 32, 0, 983076, 32, 0, 983077, 32, 0, 983078, 32, 0, 983079, 32, 0, 983080, 32, 0, 983081, 32, 0, 983082, 32, 0, 983083, 32, 0, 983084, 32, 0, 983085, 32, 0, 983086, 32, 0, 983087, 32, 0, 983088, 32, 0, 983089, 32, 0, 983090, 32, 0, 983091, 32, 0, 983092, 1610612768, 0, 983093, 1610612768, 0, 983094, 1610612768, 0, 983095, -1610612708, 0, 983096, -1610612732, 0, 1048592, 1610612737, 0, 1048593, 1610612762, 0, 1048594, -1073741797, 0, 1048595, 1610612764, 0, 1048596, 1610612764, 0, 1048597, 30, 0, 1048598, -1073741792, 0, 1048599, -1073741792, 0, 1048600, 1610612768, 0, 1048601, 1610612768, 0, 1048602, 1610612768, 0, 1048603, 1610612768, 0, 1048604, 1610612768, 0, 1048605, 32, 0, 1048606, 32, 0, 1048607, 32, 0, 1048608, 32, 0, 1048609, 32, 0, 1048610, 32, 0, 1048611, 32, 0, 1048612, 32, 0, 1048613, 32, 0, 1048614, 32, 0, 1048615, 32, 0, 1048616, 32, 0, 1048617, 32, 0, 1048618, 32, 0, 1048619, 32, 0, 1048620, -1073741794, 0, 1048621, 1610612764, 0, 1048622, 1610612764, 0, 1048623, 30, 0, 1048624, 32, 0, 1048625, 32, 0, 1048626, 32, 0, 1048627, 32, 0, 1048628, 1610612768, 0, 1048629, 1610612768, 0, 1048630, 1610612768, 0, 1048631, -1610612708, 0, 1048632, -1610612732, 0, 1114129, 1610612737, 0, 1114130, 1610612740, 0, 1114131, 1610612740, 0, 1114132, 1610612762, 0, 1114133, -1073741797, 0, 1114134, 1610612764, 0, 1114135, 1610612764, 0, 1114136, 30, 0, 1114137, 1610612768, 0, 1114138, 1610612768, 0, 1114139, 1610612768, 0, 1114140, 1610612768, 0, 1114141, 1610612768, 0, 1114142, 32, 0, 1114143, 32, 0, 1114144, 32, 0, 1114145, 32, 0, 1114146, 32, 0, 1114147, 32, 0, 1114148, 32, 0, 1114149, 32, 0, 1114150, 32, 0, 1114151, 32, 0, 1114152, 32, 0, 1114153, 32, 0, 1114154, 32, 0, 1114155, 32, 0, 1114156, -1610612708, 0, 1114157, -1073741823, 0, 1114158, 1, 0, 1114159, -1073741797, 0, 1114160, 30, 0, 1114161, 32, 0, 1114162, 32, 0, 1114163, 32, 0, 1114164, 1610612768, 0, 1114165, 1610612768, 0, 1114166, 1610612768, 0, 1114167, -1610612708, 0, 1114168, -1610612732, 0, 1179668, 1610612737, 0, 1179669, 1610612740, 0, 1179670, 1610612740, 0, 1179671, 1610612762, 0, 1179672, -1073741797, 0, 1179673, 30, 0, 1179674, 1610612768, 0, 1179675, 1610612768, 0, 1179676, 1610612768, 0, 1179677, 1610612768, 0, 1179678, 32, 0, 1179679, 32, 0, 1179680, 32, 0, 1179681, 32, 0, 1179682, 32, 0, 1179683, 32, 0, 1179684, 32, 0, 1179685, 32, 0, 1179686, 32, 0, 1179687, 32, 0, 1179688, 32, 0, 1179689, 32, 0, 1179690, 32, 0, 1179691, 32, 0, 1179692, -1610612708, 0, 1179693, 1610612737, 0, 1179694, 1610612762, 0, 1179695, 1, 0, 1179696, -1073741796, 0, 1179697, 32, 0, 1179698, 32, 0, 1179699, 1610612768, 0, 1179700, 1610612768, 0, 1179701, 1610612768, 0, 1179702, 1610612768, 0, 1179703, -1610612708, 0, 1179704, -1610612732, 0, 1245207, -1073741824, 0, 1245208, 1610612762, 0, 1245209, -1073741796, 0, 1245210, 1610612768, 0, 1245211, 1610612768, 0, 1245212, 1610612768, 0, 1245213, 32, 0, 1245214, 32, 0, 1245215, 32, 0, 1245216, 32, 0, 1245217, -1073741794, 0, 1245218, 1610612764, 0, 1245219, 1610612764, 0, 1245220, 30, 0, 1245221, 32, 0, 1245222, 32, 0, 1245223, 32, 0, 1245224, 32, 0, 1245225, 32, 0, 1245226, 32, 0, 1245227, 32, 0, 1245228, 1610612766, 0, 1245229, -1610612709, 0, 1245230, 1610612737, 0, 1245231, -1610612735, 0, 1245232, -1073741796, 0, 1245233, 1610612768, 0, 1245234, 1610612768, 0, 1245235, 1610612768, 0, 1245236, 1610612768, 0, 1245237, 1610612768, 0, 1245238, 1610612768, 0, 1245239, -1610612708, 0, 1245240, -1610612732, 0, 1310744, -1073741820, 0, 1310745, -1073741797, 0, 1310746, 30, 0, 1310747, 1610612768, 0, 1310748, 1610612768, 0, 1310749, 1610612768, 0, 1310750, 1610612768, 0, 1310751, 32, 0, 1310752, 32, 0, 1310753, -1610612708, 0, 1310754, -1073741823, 0, 1310755, 1, 0, 1310756, -1073741797, 0, 1310757, 30, 0, 1310758, 32, 0, 1310759, 32, 0, 1310760, 32, 0, 1310761, 32, 0, 1310762, 32, 0, 1310763, 32, 0, 1310764, 32, 0, 1310765, 1610612766, 0, 1310766, 28, 0, 1310767, 28, 0, 1310768, -1610612706, 0, 1310769, 32, 0, 1310770, 1610612768, 0, 1310771, 1610612768, 0, 1310772, 1610612768, 0, 1310773, 1610612768, 0, 1310774, -1073741794, 0, 1310775, 1610612763, 0, 1310776, -1610612732, 0, 1376280, -1073741824, 0, 1376281, 1610612762, 0, 1376282, -1073741796, 0, 1376283, 1610612768, 0, 1376284, 1610612768, 0, 1376285, 1610612768, 0, 1376286, 1610612768, 0, 1376287, 1610612768, 0, 1376288, 1610612768, 0, 1376289, -1610612708, 0, 1376290, 1610612737, 0, 1376291, 1610612762, 0, 1376292, 1, 0, 1376293, -1073741796, 0, 1376294, 32, 0, 1376295, 32, 0, 1376296, 32, 0, 1376297, 32, 0, 1376298, 32, 0, 1376299, 32, 0, 1376300, 32, 0, 1376301, 32, 0, 1376302, 32, 0, 1376303, 32, 0, 1376304, 32, 0, 1376305, 32, 0, 1376306, 1610612768, 0, 1376307, 1610612768, 0, 1376308, 1610612768, 0, 1376309, -1073741794, 0, 1376310, 1610612763, 0, 1376311, -1610612710, 0, 1376312, 1610612736, 0, 1441817, -1073741820, 0, 1441818, -1073741797, 0, 1441819, 30, 0, 1441820, 1610612768, 0, 1441821, 1610612768, 0, 1441822, 1610612768, 0, 1441823, 1610612768, 0, 1441824, 1610612768, 0, 1441825, 1610612766, 0, 1441826, -1610612709, 0, 1441827, 1610612737, 0, 1441828, -1610612735, 0, 1441829, -1073741796, 0, 1441830, 32, 0, 1441831, 32, 0, 1441832, 32, 0, 1441833, 32, 0, 1441834, 32, 0, 1441835, 32, 0, 1441836, 32, 0, 1441837, 32, 0, 1441838, 32, 0, 1441839, 32, 0, 1441840, 32, 0, 1441841, 1610612768, 0, 1441842, 1610612768, 0, 1441843, 1610612768, 0, 1441844, 1610612768, 0, 1441845, -1610612708, 0, 1441846, -1610612710, 0, 1441847, 1610612736, 0, 1507353, -1073741824, 0, 1507354, 1610612762, 0, 1507355, -1073741797, 0, 1507356, 30, 0, 1507357, 1610612768, 0, 1507358, 1610612768, 0, 1507359, 1610612768, 0, 1507360, 1610612768, 0, 1507361, 32, 0, 1507362, 1610612766, 0, 1507363, 28, 0, 1507364, 28, 0, 1507365, -1610612706, 0, 1507366, 32, 0, 1507367, 32, 0, 1507368, 32, 0, 1507369, 32, 0, 1507370, 32, 0, 1507371, 32, 0, 1507372, 32, 0, 1507373, 32, 0, 1507374, 32, 0, 1507375, 32, 0, 1507376, 32, 0, 1507377, 1610612768, 0, 1507378, 1610612768, 0, 1507379, 1610612768, 0, 1507380, -1073741794, 0, 1507381, 1610612763, 0, 1507382, -1610612732, 0, 1572890, -1073741824, 0, 1572891, 1610612762, 0, 1572892, -1073741797, 0, 1572893, 30, 0, 1572894, 1610612768, 0, 1572895, 1610612768, 0, 1572896, 1610612768, 0, 1572897, 1610612768, 0, 1572898, 1610612768, 0, 1572899, 1610612768, 0, 1572900, 32, 0, 1572901, 32, 0, 1572902, 32, 0, 1572903, 32, 0, 1572904, 32, 0, 1572905, 32, 0, 1572906, 32, 0, 1572907, 32, 0, 1572908, 32, 0, 1572909, 32, 0, 1572910, 32, 0, 1572911, 32, 0, 1572912, 1610612768, 0, 1572913, 1610612768, 0, 1572914, 1610612768, 0, 1572915, 1610612768, 0, 1572916, -1610612708, 0, 1572917, -1610612710, 0, 1572918, 1610612736, 0, 1638427, -1073741824, 0, 1638428, 1610612762, 0, 1638429, -1073741797, 0, 1638430, 30, 0, 1638431, 1610612768, 0, 1638432, 1610612768, 0, 1638433, 1610612768, 0, 1638434, 1610612768, 0, 1638435, 1610612768, 0, 1638436, 1610612768, 0, 1638437, 1610612768, 0, 1638438, 32, 0, 1638439, 32, 0, 1638440, 32, 0, 1638441, 32, 0, 1638442, 32, 0, 1638443, 32, 0, 1638444, 32, 0, 1638445, 1610612768, 0, 1638446, 1610612768, 0, 1638447, 1610612768, 0, 1638448, 1610612768, 0, 1638449, 1610612768, 0, 1638450, 1610612768, 0, 1638451, 1610612768, 0, 1638452, -1610612708, 0, 1638453, 26, 0, 1638454, -1610612736, 0, 1703964, -1073741824, 0, 1703965, 1610612762, 0, 1703966, -1073741797, 0, 1703967, 1610612764, 0, 1703968, 30, 0, 1703969, 1610612768, 0, 1703970, 1610612768, 0, 1703971, 1610612768, 0, 1703972, 1610612768, 0, 1703973, 1610612768, 0, 1703974, 1610612768, 0, 1703975, 1610612768, 0, 1703976, 1610612768, 0, 1703977, 1610612768, 0, 1703978, 1610612768, 0, 1703979, 1610612768, 0, 1703980, 1610612768, 0, 1703981, 1610612768, 0, 1703982, 1610612768, 0, 1703983, 1610612764, 0, 1703984, 1610612764, 0, 1703985, 1610612768, 0, 1703986, 1610612768, 0, 1703987, 1610612768, 0, 1703988, 1610612766, 0, 1703989, -1610612709, 0, 1703990, -1610612732, 0, 1769501, 1610612737, 0, 1769502, 1610612740, 0, 1769503, 1610612762, 0, 1769504, -1073741797, 0, 1769505, 1610612764, 0, 1769506, 1610612764, 0, 1769507, 30, 0, 1769508, 1610612768, 0, 1769509, 1610612768, 0, 1769510, 1610612768, 0, 1769511, 1610612768, 0, 1769512, 1610612768, 0, 1769513, 1610612768, 0, 1769514, 1610612768, 0, 1769515, 1610612768, 0, 1769516, 1610612768, 0, 1769517, 1610612768, 0, 1769518, -1610612708, 0, 1769519, -1073741823, 0, 1769520, 1, 0, 1769521, -1073741797, 0, 1769522, 1610612768, 0, 1769523, 1610612768, 0, 1769524, 1610612768, 0, 1769525, -1610612708, 0, 1769526, -1610612732, 0, 1835039, -1073741824, 0, 1835040, 1610612740, 0, 1835041, 1610612740, 0, 1835042, 1610612762, 0, 1835043, -1073741797, 0, 1835044, 1610612764, 0, 1835045, 1610612764, 0, 1835046, 1610612764, 0, 1835047, 1610612764, 0, 1835048, 1610612764, 0, 1835049, 1610612764, 0, 1835050, 1610612764, 0, 1835051, 30, 0, 1835052, 1610612768, 0, 1835053, 1610612768, 0, 1835054, -1610612708, 0, 1835055, 1610612737, 0, 1835056, 1610612762, 0, 1835057, 1, 0, 1835058, -1073741796, 0, 1835059, 1610612768, 0, 1835060, 1610612768, 0, 1835061, -1610612708, 0, 1835062, -1610612732, 0, 1900578, -1073741824, 0, 1900579, 1610612740, 0, 1900580, 1610612740, 0, 1900581, 1610612740, 0, 1900582, 1610612740, 0, 1900583, 1610612740, 0, 1900584, 1610612740, 0, 1900585, 1610612740, 0, 1900586, 1610612762, 0, 1900587, -1073741796, 0, 1900588, 1610612768, 0, 1900589, 1610612768, 0, 1900590, 32, 0, 1900591, -1610612709, 0, 1900592, 1610612737, 0, 1900593, -1610612735, 0, 1900594, -1073741796, 0, 1900595, 1610612768, 0, 1900596, 1610612768, 0, 1900597, -1610612708, 0, 1900598, -1610612732, 0, 1966122, -1073741820, 0, 1966123, -1073741797, 0, 1966124, 30, 0, 1966125, 1610612768, 0, 1966126, 1610612768, 0, 1966127, 1610612768, 0, 1966128, 28, 0, 1966129, 28, 0, 1966130, 1610612768, 0, 1966131, 1610612768, 0, 1966132, -1073741794, 0, 1966133, 1610612763, 0, 1966134, -1610612732, 0, 2031658, -1073741824, 0, 2031659, 1610612762, 0, 2031660, -1073741797, 0, 2031661, 30, 0, 2031662, 1610612768, 0, 2031663, 1610612768, 0, 2031664, 1610612768, 0, 2031665, 1610612768, 0, 2031666, 1610612768, 0, 2031667, -1073741794, 0, 2031668, 1610612763, 0, 2031669, -1610612710, 0, 2031670, 1610612736, 0, 2097195, -1073741824, 0, 2097196, 1610612762, 0, 2097197, -1073741797, 0, 2097198, 1610612764, 0, 2097199, 1610612764, 0, 2097200, 1610612764, 0, 2097201, 1610612764, 0, 2097202, 1610612764, 0, 2097203, 1610612763, 0, 2097204, -1610612710, 0, 2097205, 1610612736, 0, 2162732, -1073741824, 0, 2162733, 1610612740, 0, 2162734, 1610612740, 0, 2162735, 1610612740, 0, 2162736, 1610612740, 0, 2162737, 1610612740, 0, 2162738, 1610612740, 0, 2162739, 1610612740, 0, 2162740, 1610612736, 0 )

[node name="Boat" parent="." instance=ExtResource( 1 )]
position = Vector2( 2264, 1040 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="PlayerUI" parent="GUI" instance=ExtResource( 2 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0
script = ExtResource( 5 )

[node name="EnemyUI" type="Control" parent="GUI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -300.0
margin_top = 30.0
margin_right = 300.0
margin_bottom = 80.0
script = ExtResource( 12 )

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/EnemyUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 53.0

[node name="BossName" type="Label" parent="GUI/EnemyUI/VBoxContainer"]
margin_right = 600.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = ExtResource( 7 )
custom_fonts/font = SubResource( 2 )
text = "REAPER"
align = 1
valign = 1

[node name="BossHealth" type="ProgressBar" parent="GUI/EnemyUI/VBoxContainer"]
margin_top = 50.0
margin_right = 600.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.86
custom_styles/fg = ExtResource( 8 )
custom_styles/bg = ExtResource( 9 )
step = 1.0
value = 100.0
percent_visible = false

[node name="Label" type="Label" parent="GUI/EnemyUI/VBoxContainer/BossHealth"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.5
margin_top = -21.0
margin_right = 57.5
margin_bottom = 21.0
theme = ExtResource( 7 )
custom_fonts/font = SubResource( 1 )
text = "100/100"
align = 1
valign = 1

[node name="OnHitTween" type="Tween" parent="GUI/EnemyUI/VBoxContainer/BossHealth"]

[node name="dialogue_system" parent="GUI" instance=ExtResource( 11 )]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -600.0
margin_right = 512.0
margin_bottom = 0.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Camera" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
script = ExtResource( 6 )

[node name="Boss" parent="." instance=ExtResource( 3 )]
position = Vector2( 2072, 504 )

[node name="Phase_Changed" type="AnimationPlayer" parent="Boss"]
root_node = NodePath("../..")
anims/Change = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="CutsceneCamera" type="Camera2D" parent="."]
script = ExtResource( 13 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
autoplay = true

[connection signal="health_changed" from="Boat" to="GUI/PlayerUI" method="_on_Boat_health_changed"]
[connection signal="obtained_key" from="Boat" to="GUI/PlayerUI" method="_on_Boat_obtained_key"]
[connection signal="health_changed" from="Boss" to="GUI/EnemyUI" method="_on_Boss_health_changed"]
